
This document records the update history of all AirInputLan versions.


v1.1.2 (2026-01-24)
-------------------

修复问题 / Bug Fixes:
  * 修复卡片开头标点过滤问题
    - 过滤开头的中文标点符号：。！？，
    - 过滤多个连续的标点符号
    - 过滤标点符号后面的空白字符
  * 修复 PC 端网页 XSS 安全问题
  * 修复 HTTP 服务 Listener 资源泄漏
    - 确保程序关闭时正确释放 TCP 端口
    - 避免频繁启动/停止时出现端口被占用的错误
  * 修复文件锁释放失败问题
    - 改进错误处理逻辑，确保锁文件状态一致
    - 关闭文件失败时不删除锁文件，避免状态不一致
  * Fix leading punctuation filtering issue for cards
    - Filter leading Chinese punctuation marks: 。！？，
    - Filter multiple consecutive punctuation marks
    - Filter whitespace after punctuation marks
  * Fix PC web page XSS security issue
  * Fix HTTP service Listener resource leak
    - Ensure TCP port is properly released when program closes
    - Avoid port occupied errors when frequently starting/stopping
  * Fix file lock release failure issue
    - Improve error handling logic to ensure lock file state consistency
    - Don't delete lock file when close fails to avoid inconsistent state


v1.1.1 (2026-01-24)
-------------------

用户体验改进 / User Experience Improvements:
  * 无需互联网连接（二维码本地生成，移除外部 API 依赖）
    - 使用 QRCode.js 库在浏览器端生成二维码
    - 不再依赖 api.qrserver.com 外部服务
    - 离线环境下也能正常使用
  * No internet connection needed (QR code generated locally)
    - Use QRCode.js library to generate QR code in browser
    - No longer depends on api.qrserver.com external service
    - Works properly in offline environments

  * 快速退出优化（程序退出时间从 1-2 秒优化到约 250ms）
    - 优化 HTTP 服务优雅关闭逻辑
    - 添加 --debug 参数用于调试
    - 退出时显示详细日志信息
  * Fast exit optimization (Exit time reduced from 1-2s to ~250ms)
    - Optimize HTTP service graceful shutdown logic
    - Add --debug parameter for debugging
    - Show detailed log information on exit

  * 日志系统优化（所有日志改为中文，更易理解）
    - 统一日志格式：[类型][模块][操作] 消息
    - 中文日志：启动、错误、警告、信息
    - 日志类型：启动、错误、警告、信息
  * Logging system optimization (All logs changed to Chinese for better readability)
    - Unified log format: [Type][Module][Operation] Message
    - Chinese logs: 启动、错误、警告、信息