@@ -58,6 +58,9 @@ This is AirInputLan v1.1.2 release, fixing the issue of cards starting with punc
 - 🐛 修复文件锁释放失败问题
   - 改进错误处理逻辑，确保锁文件状态一致
   - 关闭文件失败时不删除锁文件，避免状态不一致
+- 🐛 修复前端定时器泄漏风险
+  - 添加 clearAllTimers() 函数统一管理定时器
+  - 在页面卸载时清除所有定时器，防止内存泄漏
 
 ### v1.1.1 (2026-01-24)
 
