@@ -21,6 +21,9 @@ v1.1.2 (2026-01-24)
   * 修复文件锁释放失败问题
     - 改进错误处理逻辑，确保锁文件状态一致
     - 关闭文件失败时不删除锁文件，避免状态不一致
+  * 修复前端定时器泄漏风险
+    - 添加 clearAllTimers() 函数统一管理定时器
+    - 在页面卸载时清除所有定时器，防止内存泄漏
   * Fix leading punctuation filtering issue for cards
     - Filter leading Chinese punctuation marks: 。！？，
     - Filter multiple consecutive punctuation marks
@@ -32,6 +35,9 @@ v1.1.2 (2026-01-24)
   * Fix file lock release failure issue
     - Improve error handling logic to ensure lock file state consistency
     - Don't delete lock file when close fails to avoid inconsistent state
+  * Fix frontend timer leak risk
+    - Add clearAllTimers() function to manage all timers
+    - Clear all timers on page unload to prevent memory leak
 
 
 v1.1.1 (2026-01-24)
